# EOSLuckyDice

./: .gitignore  CMakeLists.txt  README.md
include/: dice.hpp  hello.hpp  random_gen.hpp
src/: dice.cpp  hello.cpp
